# apiDoc/api-docs.yml
@@ -42,14 +42,14 @@ paths:
               $ref: '#/components/schemas/Purchase'
         required: true
       responses:
-        "500":
-          description: Internal server error
+        "400":
+          description: Bad request
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
+        "500":
+          description: Internal server error
           content:
             application/json:
               schema:
@@ -92,18 +92,6 @@ paths:
           type: string
           format: date
       responses:
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -112,6 +100,18 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserTxAmount'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
   /transactions/sum:
     get:
       tags:
@@ -135,18 +135,6 @@ paths:
           type: string
           format: date
       responses:
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -155,6 +143,18 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/TxNumbAmount'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
   /transactions/max-restaurants:
     get:
       tags:
@@ -172,6 +172,12 @@ paths:
           type: boolean
           default: false
       responses:
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
         "500":
           description: Internal server error
           content:
@@ -186,12 +192,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/RestaurantTxAmount'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
   /transactions/user-count:
     get:
       tags:
@@ -229,12 +229,6 @@ paths:
           type: boolean
           default: false
       responses:
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -243,6 +237,12 @@ paths:
                 $ref: '#/components/schemas/Count'
         "400":
           description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
           content:
             application/json:
               schema:
@@ -266,48 +266,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Menu'
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "400":
           description: Bad request
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AppError'
-  /menus/findByDishName:
-    get:
-      tags:
-      - Menu
-      summary: Search dishes by dish name
-      operationId: findMenusByDishName
-      parameters:
-      - name: dishName
-        in: query
-        description: The specified dish name
-        required: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Menu'
         "500":
           description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
           content:
             application/json:
               schema:
@@ -349,14 +315,48 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Menu'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AppError'
+  /menus/findByDishName:
+    get:
+      tags:
+      - Menu
+      summary: Search dishes by dish name
+      operationId: findMenusByDishName
+      parameters:
+      - name: dishName
+        in: query
+        description: The specified dish name
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Menu'
         "400":
           description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
           content:
             application/json:
               schema:
@@ -385,18 +385,6 @@ paths:
           format: int32
           default: 10
       responses:
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -405,6 +393,18 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/OpenHours'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
   /open-hours/findByTime:
     get:
       tags:
@@ -428,18 +428,6 @@ paths:
           type: integer
           format: int32
       responses:
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -448,6 +436,18 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/OpenHours'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
   /open-hours/findByRestaurant:
     get:
       tags:
@@ -463,18 +463,6 @@ paths:
           type: integer
           format: int64
       responses:
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -483,6 +471,18 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/OpenHours'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
   /restaurants:
     get:
       tags:
@@ -507,18 +507,6 @@ paths:
           format: int32
           default: 10
       responses:
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -527,6 +515,18 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Restaurant'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
     put:
       tags:
       - Restaurant
@@ -539,14 +539,14 @@ paths:
               $ref: '#/components/schemas/EditRestaurant'
         required: true
       responses:
-        "500":
-          description: Internal server error
+        "400":
+          description: Bad request
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
+        "500":
+          description: Internal server error
           content:
             application/json:
               schema:
@@ -557,41 +557,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Restaurant'
-  /restaurants/findByName:
-    get:
-      tags:
-      - Restaurant
-      summary: Search restaurants by name
-      operationId: findRestaurantsByName
-      parameters:
-      - name: name
-        in: query
-        description: The specified restaurant name
-        required: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/RestaurantInfo'
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-  /restaurants/findByOpenTime:
+  /restaurants/findByTime:
     get:
       tags:
       - Restaurant
@@ -615,6 +581,18 @@ paths:
           type: integer
           format: int32
       responses:
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -623,18 +601,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/RestaurantInfo'
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
   /restaurants/findByOpenHours:
     get:
       tags:
@@ -667,6 +633,18 @@ paths:
           type: boolean
           default: false
       responses:
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -675,18 +653,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/RestaurantInfo'
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
   /restaurants/findByDishNumb:
     get:
       tags:
@@ -724,6 +690,18 @@ paths:
         schema:
           type: number
       responses:
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -732,18 +710,40 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/RestaurantInfo'
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+  /restaurants/findByName:
+    get:
+      tags:
+      - Restaurant
+      summary: Search restaurants by name
+      operationId: findRestaurantsByName
+      parameters:
+      - name: name
+        in: query
+        description: The specified restaurant name
+        required: true
+        schema:
+          type: string
+      responses:
         "400":
           description: Bad request
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RestaurantInfo'
   /favourites:
     get:
       tags:
@@ -821,18 +821,6 @@ paths:
           format: int32
           default: 10
       responses:
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "200":
           description: Successful operation
           content:
@@ -841,6 +829,18 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
     put:
       tags:
       - User
@@ -853,36 +853,32 @@ paths:
               $ref: '#/components/schemas/EditUser'
         required: true
       responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
         "400":
           description: Bad request
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AppError'
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
 components:
   schemas:
     Purchase:
       required:
       - menuId
-      - restaurantId
       type: object
       properties:
         userId:
-          type: integer
-          format: int64
-        restaurantId:
           type: integer
           format: int64
         menuId:
