# src/main/java/idv/fd/restaurant/dto/DishInfo.java
@@ -1,0 +1,13 @@
+package idv.fd.restaurant.dto;
+
+import java.math.BigDecimal;
+
+public interface DishInfo extends RestaurantInfo {
+
+    Long getMenuId();
+
+    String getDishName();
+
+    BigDecimal getPrice();
+
+}
