# src/main/java/idv/fd/restaurant/dto/WeekOpenPeriod.java
@@ -1,6 +1,6 @@
 package idv.fd.restaurant.dto;
 
-public interface WeekOpenPeriod extends RestaurantInfo{
+public interface WeekOpenPeriod extends RestaurantInfo {
 
     Long getWeekOpenPeriod();
 
